<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.beesham.sunshine"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.beesham.sunshine.LocationEditTextPreference
        custom:minLength="3"
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>

    <ListPreference
        android:title="@string/pref_temperature_units_label"
        android:key="@string/pref_temperature_units_key"
        android:defaultValue="@string/pref_temperature_units_default"
        android:entries="@array/temperature_units_entries"
        android:entryValues="@array/temperature_units_entries"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:defaultValue="@string/pref_enable_notifications_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:summaryOff="@string/pref_enable_notifications_false"/>

    <ListPreference
        android:title="@string/pref_art_pack_label"
        android:key="@string/pref_art_pack_key"
        android:defaultValue="@string/pref_art_pack_sunshine"
        android:entries="@array/pref_art_pack_options"
        android:entryValues="@array/pref_art_pack_values"/>

</PreferenceScreen>